# RAG

./: .gitignore  demonstration.ipynb  pyproject.toml
rag/: app.py  settings.py  utils.py
rag/domain/: chunks.py  documents.py  types.py
rag/domain/base/: mongo_document.py  qdrant_document.py
rag/infrastructure/: embeddings.py  mongo.py  qdrant.py  reranker.py  retriever.py  semantic_chunker.py
rag/preprocessing/: dataset.py  featurization.py  utils.py
