[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.3.0",
    "datasets>=3.5.0",
    "imagehash>=4.3.2",
    "loguru>=0.7.3",
    "pillow>=11.2.1",
    "pydantic-ai>=0.1.0",
    "pymongo>=4.12.0",
    "qdrant-client>=1.13.3",
    "youtube-transcript-api>=1.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
